Add all my files

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-greeting-name=Sunnyvale
-greeting-coffee=${greeting-name} is drinking Nescafe
-
+greeting.name=Sunnyvale
+greeting.coffee=${greeting-name} is drinking Nescafe
+droid.id=5481
+droid.description=Kitkat
