--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-greeting.name=Sunnyvale
-greeting.coffee=${greeting-name} is drinking Nescafe
 droid.id=5481
 droid.description=Kitkat
+management.endpoints.web.exposure.include=env, info, health
