--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 droid.id=5481
 droid.description=Kitkat
-management.endpoints.web.exposure.include=env, info, health
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
